*/plugins/meson.build: define feature macros in Features.h
This makes ccache more efficient when recompiling with different
plugins.

--- a/src/input/plugins/meson.build
+++ b/src/input/plugins/meson.build
@@ -7,7 +7,7 @@ if alsa_dep.found()
 endif
 
 libcdio_paranoia_dep = dependency('libcdio_paranoia', version: '>= 10.2+0.93+1', required: get_option('cdio_paranoia'))
-conf.set('ENABLE_CDIO_PARANOIA', libcdio_paranoia_dep.found())
+input_features.set('ENABLE_CDIO_PARANOIA', libcdio_paranoia_dep.found())
 if libcdio_paranoia_dep.found()
   input_plugins_sources += 'CdioParanoiaInputPlugin.cxx'
 endif
@@ -25,7 +25,7 @@ if ffmpeg_dep.found()
 endif
 
 libmms_dep = dependency('libmms', version: '>= 0.4', required: get_option('mms'))
-conf.set('ENABLE_MMS', libmms_dep.found())
+input_features.set('ENABLE_MMS', libmms_dep.found())
 if libmms_dep.found()
   input_plugins_sources += 'MmsInputPlugin.cxx'
 endif
@@ -47,7 +47,7 @@ else
     error('Qobuz requires CURL, libyajl and libgcrypt')
   endif
 endif
-conf.set('ENABLE_QOBUZ', enable_qobuz)
+input_features.set('ENABLE_QOBUZ', enable_qobuz)
 if enable_qobuz
   input_plugins_sources += [
     'QobuzClient.cxx',
@@ -68,7 +68,7 @@ else
     error('Tidal requires CURL and libyajl')
   endif
 endif
-conf.set('ENABLE_TIDAL', enable_tidal)
+input_features.set('ENABLE_TIDAL', enable_tidal)
 if enable_tidal
   input_plugins_sources += [
     'TidalErrorParser.cxx',
