.travis.yml: disable zzip on OS X to fix Travis-CI build failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -135,7 +135,8 @@ jobs:
             - chromaprint
             - libsamplerate
             - libsoxr
-            - libzzip
+            # libzzip appears to be broken on Homebrew: "ld: library not found for -lzzip"
+            #- libzzip
             - flac
             - opus
             - libvorbis
