meson.build: default to warning_level=2
This branch isn't yet ready for level 3 (`-Wpedantic`) due to several
C++ violations (e.g. variable length arrays).  These are already
cleaned up in the master branch (0.22).

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,8 @@ project(
   meson_version: '>= 0.49.0',
   default_options: [
     'c_std=c99',
-    'cpp_std=c++14'
+    'cpp_std=c++14',
+    'warning_level=2',
   ],
   license: 'GPLv2+',
 )
