meson.build: fix the WildMidi check when the feature is disabled
Fixes regression from commit 69f09648a402

--- a/src/decoder/plugins/meson.build
+++ b/src/decoder/plugins/meson.build
@@ -129,9 +129,13 @@ if wavpack_dep.found()
   decoder_plugins_sources += 'WavpackDecoderPlugin.cxx'
 endif
 
-if not get_option('wildmidi').disabled()
-  wildmidi_dep = dependency('wildmidi', required: get_option('wildmidi'))
+wildmidi_required = get_option('wildmidi')
+if wildmidi_required.enabled()
+  # if the user has force-enabled WildMidi, allow the pkg-config test
+  # to fail; after that, the find_library() check must succeed
+  wildmidi_required = false
 endif
+wildmidi_dep = dependency('wildmidi', required: wildmidi_required)
 if not wildmidi_dep.found()
   wildmidi_dep = c_compiler.find_library('WildMidi', required: get_option('wildmidi'))
 endif
