meson.build: set default option default_library=static
For subprojects.

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,10 @@ project(
     'c_std=c99',
     'cpp_std=c++17',
     'warning_level=3',
+
+    # This is only here to build subprojects as static libraries; MPD
+    # itself doesn't ship any libraries.
+    'default_library=static',
   ],
   license: 'GPLv2+',
 )
