meson.build: always write encoder/Features.h
Fixes a build failure in `CommandLine.cxx`.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/905

--- a/src/encoder/meson.build
+++ b/src/encoder/meson.build
@@ -4,6 +4,7 @@ encoder_features.set('ENABLE_ENCODER', need_encoder)
 
 if not need_encoder
   encoder_glue_dep = dependency('', required: false)
+  configure_file(output: 'Features.h', configuration: encoder_features)
   subdir_done()
 endif
 
