meson.build: defaults for "build.c_std" and "build.cpp_std"
Since Meson 0.51, there are special build options for "native:true"
builds, prefixed with "build.".  This change breaks cross builds
because `GenParseName.cxx` is no longer built with `-std=c++17`.

This patch adds defaults for "build.c_std" and "build.cpp_std".

Closes https://github.com/MusicPlayerDaemon/MPD/issues/890

--- a/meson.build
+++ b/meson.build
@@ -5,7 +5,9 @@ project(
   meson_version: '>= 0.49.0',
   default_options: [
     'c_std=c99',
+    'build.c_std=c99',
     'cpp_std=c++17',
+    'build.cpp_std=c++17',
     'warning_level=3',
 
     # This is only here to build subprojects as static libraries; MPD
