doc/meson.build: convert option "documentation" to Meson "feature"
This allows automatic optional detection of Sphinx.  This will be
useful when we start building the manpages with Sphinx, which many
users may want to have.

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -1,6 +1,10 @@
 install_man(['mpd.1', 'mpd.conf.5'])
 
-sphinx = find_program('sphinx-build')
+sphinx = find_program('sphinx-build', required: get_option('documentation'))
+if not sphinx.found()
+  subdir_done()
+endif
+
 sphinx_output = custom_target(
   'HTML documentation',
   output: 'html',
