meson_options.txt: add option html_manual

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,5 @@
 option('documentation', type: 'feature', description: 'Build documentation')
+option('html_manual', type: 'boolean', value: true, description: 'Build the HTML manual')
 
 option('test', type: 'boolean', value: false, description: 'Build the unit tests and debug programs')
 
