Seperate function definition for TaggedInputStream

--- a/src/input/meson.build
+++ b/src/input/meson.build
@@ -37,6 +37,7 @@ input_glue = static_library(
   'BufferingInputStream.cxx',
   'BufferedInputStream.cxx',
   'MaybeBufferedInputStream.cxx',
+  'TaggedInputStream.cxx',
   'cache/Config.cxx',
   'cache/Manager.cxx',
   'cache/Item.cxx',
