LogLevel: rename DEFAULT to NOTICE
"DEFAULT" is a bad name - all it says is that it's the default value,
but it doesn't say what it means.  The name NOTICE mimics the syslog
level.

--- a/doc/mpdconf.example
+++ b/doc/mpdconf.example
@@ -92,7 +92,7 @@
 # Suppress all messages below the given threshold.  Use "verbose" for
 # troubleshooting.
 #
-#log_level			"default"
+#log_level			"notice"
 #
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
