--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -1,3 +1,9 @@
+event_features = configuration_data()
+event_features.set('USE_EVENTFD', is_linux and get_option('eventfd'))
+event_features.set('USE_SIGNALFD', is_linux and get_option('signalfd'))
+event_features.set('USE_EPOLL', is_linux and get_option('epoll'))
+configure_file(output: 'Features.h', configuration: event_features)
+
 event_sources = []
 
 if uring_dep.found()
