--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project(
   'mpd',
   ['c', 'cpp'],
-  version: '0.22.1',
+  version: '0.23~git',
   meson_version: '>= 0.49.0',
   default_options: [
     'c_std=c99',
