event/IdleMonitor: refactor to IdleEvent
Instead of using this as a base class implementing a virtual method,
the new class IdleEvent can be used as a variable, decoupling
IdleMonitor's internal state from the derived class.

This is similar to commit 30a5dd267b6cb9ee21106d5d949de2f04781c6e7
which refactored TimeoutMonitor to TimerEvent.

--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -22,7 +22,7 @@ event = static_library(
   'event',
   'SignalMonitor.cxx',
   'TimerEvent.cxx',
-  'IdleMonitor.cxx',
+  'IdleEvent.cxx',
   'DeferEvent.cxx',
   'MaskMonitor.cxx',
   'SocketMonitor.cxx',
