filter/ffmpeg: detect the output sample format
Some FFmpeg filters change the sample format, and since MPD assumes
this never happens, this results in loud noise instead of music.  This
commit finally implements the TODO comment by sending one frame of
silence to the filter and checking the output frame's format.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1009

--- a/src/lib/ffmpeg/meson.build
+++ b/src/lib/ffmpeg/meson.build
@@ -20,7 +20,10 @@ endif
 
 ffmpeg_sources = []
 if libavfilter_dep.found()
-  ffmpeg_sources += 'Filter.cxx'
+  ffmpeg_sources += [
+    'Filter.cxx',
+    'DetectFilterFormat.cxx',
+  ]
 endif
 
 ffmpeg = static_library(
