event/DeferEvent: split the thread-safe version into new class InjectEvent

--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -24,6 +24,7 @@ event = static_library(
   'SignalMonitor.cxx',
   'TimerEvent.cxx',
   'IdleEvent.cxx',
+  'InjectEvent.cxx',
   'DeferEvent.cxx',
   'MaskMonitor.cxx',
   'SocketEvent.cxx',
