test/util/TestTemplateString: new unit test

--- a/test/util/meson.build
+++ b/test/util/meson.build
@@ -6,6 +6,7 @@ test(
     'TestDivideString.cxx',
     'TestMimeType.cxx',
     'TestSplitString.cxx',
+    'TestTemplateString.cxx',
     'TestUriExtract.cxx',
     'TestUriQueryParser.cxx',
     'TestUriRelative.cxx',
