test/util/TestException: new unit test

--- a/test/util/meson.build
+++ b/test/util/meson.build
@@ -4,6 +4,7 @@ test(
     'TestUtil',
     'TestCircularBuffer.cxx',
     'TestDivideString.cxx',
+    'TestException.cxx',
     'TestMimeType.cxx',
     'TestSplitString.cxx',
     'TestTemplateString.cxx',
