doc/mpd.conf.5.rst: updated ReplayGain website links
"The documentation for mpd.conf still links to https://replaygain.org
– according to archive.org, this domain has been defunct since
2014-09-14, shortly after got domain squatted and ever since hosts
dubious content."

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1050

--- a/doc/mpdconf.example
+++ b/doc/mpdconf.example
@@ -372,7 +372,8 @@ input {
 # the argument "off", "album", "track" or "auto". "auto" is a special mode that
 # chooses between "track" and "album" depending on the current state of
 # random playback. If random playback is enabled then "track" mode is used.
-# See <http://www.replaygain.org> for more details about ReplayGain.
+# See <https://wiki.hydrogenaud.io/index.php?title=Replaygain> for
+# more details about ReplayGain.
 # This setting is off by default.
 #
 #replaygain			"album"
