event/TimerEvent: rename to FineTimerEvent
... and make TimerEvent a type alias for FineTimerEvent (i.e. swap
names).

--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -23,7 +23,7 @@ event = static_library(
   'event',
   'SignalMonitor.cxx',
   'TimerList.cxx',
-  'TimerEvent.cxx',
+  'FineTimerEvent.cxx',
   'IdleEvent.cxx',
   'InjectEvent.cxx',
   'DeferEvent.cxx',
