event/TimerWheel: optimized container for CoarseTimerEvent

--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -22,7 +22,9 @@ endif
 event = static_library(
   'event',
   'SignalMonitor.cxx',
+  'TimerWheel.cxx',
   'TimerList.cxx',
+  'CoarseTimerEvent.cxx',
   'FineTimerEvent.cxx',
   'IdleEvent.cxx',
   'InjectEvent.cxx',
