--- a/src/output/plugins/meson.build
+++ b/src/output/plugins/meson.build
@@ -114,6 +114,19 @@ if libsndio_dep.found()
   output_plugins_sources += 'SndioOutputPlugin.cxx'
 endif
 
+output_features.set('ENABLE_SNAPCAST_OUTPUT', get_option('snapcast'))
+if get_option('snapcast')
+  output_plugins_sources += [
+    'snapcast/SnapcastOutputPlugin.cxx',
+    'snapcast/Client.cxx',
+  ]
+  output_plugins_deps += [ event_dep, net_dep ]
+
+  # TODO: the Snapcast plugin needs just the "wave" encoder, but this
+  # enables all available encoders
+  need_encoder = true
+endif
+
 enable_solaris_output = get_option('solaris_output')
 if enable_solaris_output.auto()
   enable_solaris_output = host_machine.system() == 'sunos' or host_machine.system() == 'solaris'
